--- a/Portfoliyo.html
+++ b/Portfoliyo.html
@@ -550,7 +550,7 @@
             <div class="row align-items-center">
                 <!-- Content Section -->
                 <div class="col-md-6">
-                    <h2 class="mb-4">Book Your FREE Consultation</h2>
+                    <h2 class="mb-4">Portfolio</h2>
                     <p>
                         Take the first step towards your study abroad journey with our expert guidance.
                         Our counselors are here to assist you with personalized solutions tailored to your needs.
